fix : CalculatorTest null 값 포함 예외 테스트 코드 수정